# s3-ceph-setting-x-aws-tools

./: .gitignore  README.md  app.js  package-lock.json  package.json  resetCorsForBuckets.js  setCorsAndPolicyForBuckets.js  setCorsForBuckets.js  toggleBucketPublic.js  verifyBucketPublic.js  verifyCorsForBuckets.js
rust-language/: README.md
rust-language/s3-cors-user-configurations/: Cargo.toml
rust-language/s3-cors-user-configurations/src/: main.rs
